# stm32-hal2-template

./: Cargo.toml  cargo-generate.toml  pre-script.rhai
.cargo/: config.toml.liquid
src/: main.rs.liquid
